# Pmultispectral

./: ._pyproject.toml  ._setup.py  .coveragerc  .flake8  .gitattributes  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  learning_lunch.py  pipeline.py  pipline_thermal.py  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
pmultispectral/: .___init__.py  _version.py  extract_pixel_values_raster.py  rasterio_indices.py  rasterio_io.py  split_shp.py  split_shp_2.py  zonal_statistics.py
